--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp": "3.9.*",
     "gulp-ruby-sass": "2.0.*",
     "gulp-notify": "2.2.*",
-    "gulp-livereload": "3.8.*"
+    "gulp-livereload": "3.8.*",
+    "yargs": "3.27.*"
   }
 }
