--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {
     "gulp": "3.9.*",
     "gulp-ruby-sass": "2.0.*",
+    "gulp-uglify": "1.4.*",
+    "gulp-rename": "1.2.*",
     "gulp-notify": "2.2.*",
-    "gulp-livereload": "3.8.*",
+    "browser-sync": "2.9.*",
     "yargs": "3.27.*"
   }
 }
